testdata/language-features/basic-list/listcomp08.reject.out
type error: can not unify
[32m'Bool[m
with
[32m'String[m

in testdata/language-features/basic-list/listcomp08.reject.lc:1:23:
value = [x | x <- [], "not Bool"]
                      ^^^^^^^^^^

------------ trace
!type error: can not unify
[32m'Bool[m
with
[32m'String[m

in testdata/language-features/basic-list/listcomp08.reject.lc:1:23

------------ tooltips
testdata/language-features/basic-list/listcomp08.reject.lc 1:10-1:33  V1 -> List V1
testdata/language-features/basic-list/listcomp08.reject.lc 1:23-1:33  String
